<resources>
    <string name="app_name">Trippin</string>
    <string name="skip">Skip</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="privacy">By continuing, you agree to our \n Terms of Service, Privacy Policy, Content Policy</string>
    <string name="login_text">Explore New\nPlace With Us</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="mobileno">Mobile No</string>
    <string name="signup_text"><![CDATA[Create Account & Explore]]></string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="login_here">Login Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search_hint">Search places, restraunts, etc</string>
    <string name="signup_privacy">You agree to our Terms of Service Privacy Policy Content Policy</string>
    <string name="edit">Edit</string>
    <string name="place_image">Place Image</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="field_required">This Field is Required</string>
    <string name="password_limit">Password must be minimum 8 characters</string>
    <string name="type">Type</string>
    <string name="call">Call</string>
    <string name="mail">Mail</string>
    <string name="reviews">Reviews</string>
    <string name="see_reviews">See Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="add_your_review_here">Add your review here</string>
    <string name="_5">5</string>
    <string name="close_review">Close Review</string>
    <string name="rating">Rating</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="no_review">Oops! No Reviews Found. \nIt Never too late. Review Now</string>
    <string name="back">back</string>
    <string name="profile">Profile</string>
    <string name="update_profile_image">Update Profile Image</string>
    <string name="add_your_description_here">Add Your Description Here....</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Upload Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="bgimage">BgImage</string>
</resources>