<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet_bg"
    tools:context=".UI.Fragments.Reviews.AddReviewFragment">

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/close_review"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:padding="10dp"
        android:text="@string/add_review"
        android:textColor="@color/slate_black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_review"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top|start"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins"
        android:gravity="top|start"
        android:hint="@string/add_your_review_here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/slate_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/tv_rating_extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/rating"
        android:textColor="@color/slate_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_review" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_extra"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_hotel"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/white"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@drawable/chip_bg_state"
            app:chipIcon="@drawable/ic_star"
            app:chipIconEnabled="true"
            app:chipIconTint="@android:color/holo_red_light"
            app:chipStartPadding="10dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_restraunt"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/_2"
            android:textColor="@color/white"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@drawable/chip_bg_state"
            app:chipIcon="@drawable/ic_star"
            app:chipIconEnabled="true"
            app:chipIconTint="@android:color/holo_orange_dark"
            app:chipStartPadding="10dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_shop"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/_3"
            android:textColor="@color/white"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@drawable/chip_bg_state"
            app:chipIcon="@drawable/ic_star"
            app:chipIconEnabled="true"
            app:chipIconTint="@android:color/holo_blue_dark"
            app:chipStartPadding="10dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_snacks"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/_4"
            android:textColor="@color/white"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@drawable/chip_bg_state"
            app:chipIcon="@drawable/ic_star"
            app:chipIconEnabled="true"
            app:chipIconTint="@color/main_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_other"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/_5"
            android:textColor="@color/white"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@drawable/chip_bg_state"
            app:chipIcon="@drawable/ic_star"
            app:chipIconEnabled="true" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_addReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ripple_btn_bg"
        android:fontFamily="@font/poppins"
        android:text="@string/add_review"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

</androidx.constraintlayout.widget.ConstraintLayout>